# dumpfilter

./: CMakeLists.txt  README  dumpfilter.spec
src/: CMakeLists.txt  dumpfilter.gdb  dumpfilter.ini  dumpfilter.init  dumpfilter.py  zgdb
test/: CMakeLists.txt  large_crash.c
